# Practica

./: CmakeLists.txt
Lab1/: CMakeLists.txt
Lab1/Task1/: CMakeLists.txt  Task1.c
Lab1/Task2/: CMakeLists.txt  Task2.c
Lab1/Task3/: CMakeLists.txt  Task3.c
Lab1/Task4/: CMakeLists.txt  Task4.c
Lab1/Task5/: CMakeLists.txt  Task5_func.c  Task5_main.c
Lab1/Task6/: CMakeLists.txt  Task6_func.c  Task6_main.c
Lab1/Task7/: CMakeLists.txt  Task7_func.c  Task7_main.c  func.h
Lab1/Task8/: CMakeLists.txt
Lab2/: CmakeLists.txt
Lab2/Lab/: 2.3Lab.c  CmakeLists.txt  Lab_21.h  Lab_22.h
Lab3/: CmakeLists.txt
Lab3/Lab/: CmakeLists.txt  Task11.h  Task12.h  Task13.h  Task14.h  Task15.h  Task21.h  Task22.h  Task23.h  Task24.h  Task25.h  Task31.h  Task32.h  Task33.h  Task34.h  Task35.h  main.c  main2.c  main3.c
Lab4/: CMakeLists.txt
Lab4/Lab/: Task44.c
Lab5/: CmakeLists.txt
Lab5/Lab/: main5.c
Lab6/: CmakeLists.txt
Lab6/Lab/: main6.c
Lab7/: CmakeLists.txt
Lab7/Lab/: main7.c
